force-app/main/default/objects/Lead/fields/Additional_User_Name__c.field-meta.xml
<CustomField>
    <fullName>Additional_User_Name__c</fullName>
    <label>Additional User Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>