force-app/main/default/objects/Lead/fields/Age_of_Lead__c.field-meta.xml
<CustomField>
    <fullName>Age_of_Lead__c</fullName>
    <formula>if(  ISNULL(Qualified_Unqualified_Date__c ) , (ROUND(NOW()-CreatedDate, 0)) , (ROUND(Qualified_Unqualified_Date__c-CreatedDate, 0)) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Age of Lead</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>