force-app/main/default/objects/Lead/fields/Auditor_Department_List__c.field-meta.xml
<CustomField>
    <fullName>Auditor_Department_List__c</fullName>
    <label>Auditor Department List</label>
    <length>255</length>
    <type>Text</type>
</CustomField>