force-app/main/default/objects/Lead/fields/Booked_By_Prospect_CP__c.field-meta.xml
<CustomField>
    <fullName>Booked_By_Prospect_CP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Booked By Prospect</label>
    <type>Checkbox</type>
</CustomField>