force-app/main/default/objects/Lead/fields/Business_Fax__c.field-meta.xml
<CustomField>
    <fullName>Business_Fax__c</fullName>
    <label>Business Fax</label>
    <type>Phone</type>
</CustomField>