force-app/main/default/objects/Lead/fields/CP_Lead_Source_Details_String__c.field-meta.xml
<CustomField>
    <fullName>CP_Lead_Source_Details_String__c</fullName>
    <label>CP_Lead_Source_Details_String</label>
    <length>255</length>
    <type>Text</type>
</CustomField>