force-app/main/default/objects/Lead/fields/Disqualified_Reason__c.field-meta.xml
<CustomField>
    <fullName>Disqualified_Reason__c</fullName>
    <description>This field is mandatory when the Lead status is &quot;Unqualified&quot;.</description>
    <inlineHelpText>This field is mandatory when the Lead status is &quot;Unqualified&quot;.</inlineHelpText>
    <label>Disqualified Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Bad Data</fullName>
            </value>
            <value>
                <fullName>Opted Out</fullName>
            </value>
            <value>
                <fullName>Duplicate</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>No Interest</fullName>
            </value>
            <value>
                <fullName>Personal Consumer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>