force-app/main/default/objects/Lead/fields/Division__c.field-meta.xml
<CustomField>
    <fullName>Division__c</fullName>
    <formula>TEXT(Program__r.Entity__c)</formula>
    <label>Division</label>
    <type>Text</type>
</CustomField>