force-app/main/default/objects/Lead/fields/Email_Bounce__c.field-meta.xml
<CustomField>
    <fullName>Email_Bounce__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box if email was sent and you receive Bounce message.</inlineHelpText>
    <label>Email Bounce</label>
    <type>Checkbox</type>
</CustomField>