force-app/main/default/objects/Lead/fields/Email_Bounce_Date__c.field-meta.xml
<CustomField>
    <fullName>Email_Bounce_Date__c</fullName>
    <inlineHelpText>Add Date Email was bounced. This can will be tied to hubspot integration too.</inlineHelpText>
    <label>Email Bounce Date</label>
    <type>Date</type>
</CustomField>