force-app/main/default/objects/Lead/fields/External_Referred_By_Contact_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Referred_By_Contact_Id__c</fullName>
    <formula>Referred_By_Contact__r.External_Record_Id__c</formula>
    <label>External Referred By (Contact) Id</label>
    <type>Text</type>
</CustomField>