force-app/main/default/objects/Lead/fields/Lead_Converted__c.field-meta.xml
<CustomField>
    <fullName>Lead_Converted__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Lead Converted</label>
    <type>Checkbox</type>
</CustomField>