force-app/main/default/objects/Lead/fields/Lead_Creator__c.field-meta.xml
<CustomField>
    <fullName>Lead_Creator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead Creator</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Leads1</relationshipName>
    <type>Lookup</type>
</CustomField>