force-app/main/default/objects/Lead/fields/Lead_Queue__c.field-meta.xml
<CustomField>
    <fullName>Lead_Queue__c</fullName>
    <label>Lead Queue</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FA Lead Queue</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>