force-app/main/default/objects/Lead/fields/Professional_Fee__c.field-meta.xml
<CustomField>
    <fullName>Professional_Fee__c</fullName>
    <label>Professional Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>