force-app/main/default/objects/Lead/fields/Project_Site_Details__c.field-meta.xml
<CustomField>
    <fullName>Project_Site_Details__c</fullName>
    <label>Project Site Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>