force-app/main/default/objects/Lead/fields/Qualified_Unqualified_Date__c.field-meta.xml
<CustomField>
    <fullName>Qualified_Unqualified_Date__c</fullName>
    <label>Qualified/Unqualified Date</label>
    <type>DateTime</type>
</CustomField>