force-app/main/default/objects/Lead/fields/Recipient__c.field-meta.xml
<CustomField>
    <fullName>Recipient__c</fullName>
    <label>Recipient</label>
    <type>Email</type>
</CustomField>