force-app/main/default/objects/Lead/fields/Recipient_Email__c.field-meta.xml
<CustomField>
    <fullName>Recipient_Email__c</fullName>
    <label>Recipient Email</label>
    <type>TextArea</type>
</CustomField>