force-app/main/default/objects/Lead/fields/Referred_By_Contact__c.field-meta.xml
<CustomField>
    <fullName>Referred_By_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Add a contact if the Lead Source is &quot;Costumer Referral&quot;</inlineHelpText>
    <label>Referred By (Contact)</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>