force-app/main/default/objects/Lead/fields/Target_Audit_Date__c.field-meta.xml
<CustomField>
    <fullName>Target_Audit_Date__c</fullName>
    <label>Target Audit Date</label>
    <type>Date</type>
</CustomField>