force-app/main/default/objects/Lead/fields/Web_Traffic_Source__c.field-meta.xml
<CustomField>
    <fullName>Web_Traffic_Source__c</fullName>
    <description>Hubspot mapped field.values as listed on web forms</description>
    <label>Original Lead Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Web_Traffic_Source</valueSetName>
    </valueSet>
</CustomField>