force-app/main/default/objects/Lead/recordTypes/SCS_Global_Services.recordType-meta.xml
<RecordType>
    <fullName>SCS_Global_Services</fullName>
    <active>true</active>
    <businessProcess>SCS Standard Lead Process</businessProcess>
    <label>SCS Global Services</label>
</RecordType>