force-app/main/default/objects/Lead/recordTypes/SCS_Standard.recordType-meta.xml
<RecordType>
    <fullName>SCS_Standard</fullName>
    <active>true</active>
    <businessProcess>New Qualified Unqualified Processs for Standard User</businessProcess>
    <label>SCS Standard</label>
</RecordType>