force-app/main/default/objects/Lead/validationRules/Lead_Process_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Lead_Process_Validation</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
	ISCHANGED(Status),
	OR(

		AND(ISPICKVAL(PRIORVALUE(Status),&quot;New&quot;),NOT(ISPICKVAL(Status, &quot;Unqualified&quot;)),NOT(ISPICKVAL(Status, &quot;Nurturing&quot;))),

		AND(ISPICKVAL(PRIORVALUE(Status),&quot;Nurturing&quot;),NOT(ISPICKVAL(Status, &quot;Unqualified&quot;)),NOT(ISPICKVAL(Status, &quot;Working&quot;))),

		AND(ISPICKVAL(PRIORVALUE(Status),&quot;Working&quot;),NOT(ISPICKVAL(Status, &quot;Unqualified&quot;)),NOT(ISPICKVAL(Status, &quot;SQL&quot;))),

		AND(ISPICKVAL(PRIORVALUE(Status),&quot;SQL&quot;),NOT(ISPICKVAL(Status, &quot;Unqualified&quot;)),NOT(ISPICKVAL(Status, &quot;Qualified&quot;))),

		ISPICKVAL(PRIORVALUE(Status), &quot;Qualified&quot;)

	),
	NOT($Permission.Bypass_Permission)
)</errorConditionFormula>
    <errorMessage>The lead Status journey must be New →  Nurturing -&gt;  Working → SQL -&gt; Qualify.</errorMessage>
</ValidationRule>