force-app/main/default/objects/Lead/validationRules/Lead_Status_Change_Validation_Address.validationRule-meta.xml
<ValidationRule>
    <fullName>Lead_Status_Change_Validation_Address</fullName>
    <active>true</active>
    <description>Country field is mandatory for moving a lead to SQL state.</description>
    <errorConditionFormula>AND(
ISCHANGED(Status),
OR(
ISPICKVAL(Status, &apos;SQL&apos;),
ISPICKVAL(Status, &apos;Qualified&apos;)),
ISBLANK(Country),
NOT($Permission.Bypass_Permission)  
)</errorConditionFormula>
    <errorDisplayField>Country</errorDisplayField>
    <errorMessage>Country field is mandatory before converting the lead.</errorMessage>
</ValidationRule>