force-app/main/default/objects/Lead/validationRules/Lead_Status_Change_Validation_Program.validationRule-meta.xml
<ValidationRule>
    <fullName>Lead_Status_Change_Validation_Program</fullName>
    <active>true</active>
    <description>Validation to check if program field is populated while changing lead status SQL</description>
    <errorConditionFormula>AND(
ISCHANGED(Status),
OR(
ISPICKVAL(Status, &apos;SQL&apos;),
ISPICKVAL(Status, &apos;Qualified&apos;)),
ISBLANK(Program__c),
NOT(Record_Type_Name__c=&apos;SCS_Standard&apos;),
NOT($Permission.Bypass_Permission)
)</errorConditionFormula>
    <errorDisplayField>Program__c</errorDisplayField>
    <errorMessage>Program field is mandatory before converting the lead.</errorMessage>
</ValidationRule>