force-app/main/default/objects/Lead/validationRules/Mobile_Number_Must_Be_Digit.validationRule-meta.xml
<ValidationRule>
    <fullName>Mobile_Number_Must_Be_Digit</fullName>
    <active>false</active>
    <errorConditionFormula>AND( 
	NOT(ISBLANK(MobilePhone)),
	OR( 
		OR( 
			LEN( MobilePhone) &lt;= 9 , 
			LEN( MobilePhone) &gt;= 18 
		), 
		NOT( 
			OR( 
				REGEX(MobilePhone, &quot;[0-9 ]+&quot;), 
				REGEX(MobilePhone, &quot;\\+[0-9 ]+&quot;)
			) 
		)
	),
	NOT($Permission.Bypass_Permission)
)</errorConditionFormula>
    <errorDisplayField>Phone</errorDisplayField>
    <errorMessage>Mobile number must be minimum 9 digit and should include numbers.</errorMessage>
</ValidationRule>