force-app/main/default/objects/Lead/validationRules/Phone_Number_Must_Be_Digit.validationRule-meta.xml
<ValidationRule>
    <fullName>Phone_Number_Must_Be_Digit</fullName>
    <active>false</active>
    <errorConditionFormula>AND( 
	NOT(ISBLANK(Phone)), 
	NOT( 
		OR( 
			REGEX(Phone, &quot;[0-9 ]+&quot;), 
			REGEX(Phone, &quot;^[+]?[0-9-() ]*$&quot;)
		) 
	),
	NOT($Permission.Bypass_Permission)
)</errorConditionFormula>
    <errorDisplayField>Phone</errorDisplayField>
    <errorMessage>Phone number must be digit.</errorMessage>
</ValidationRule>