force-app/main/default/objects/Lead/listViews/Carbon_Offset_Verification_Sales_Lead.listView-meta.xml
<ListView>
    <fullName>Carbon_Offset_Verification_Sales_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>Carbon Offset Verification Sales</label>
    <queue>Carbon_Offset_Verification_Sales</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>