force-app/main/default/objects/Lead/listViews/Consulting_Leads.listView-meta.xml
<ListView>
    <fullName>Consulting_Leads</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.TITLE</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.PHONE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <columns>LEAD.LAST_UPDATE</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>Department__c</columns>
    <columns>Program__c</columns>
    <columns>LEAD.LAST_ACTIVITY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>notEqual</operation>
        <value>Qualified</value>
    </filters>
    <filters>
        <field>LEAD.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Lead.SCS_Global_Services</value>
    </filters>
    <filters>
        <field>Department__c</field>
        <operation>equals</operation>
        <value>205</value>
    </filters>
    <label>Consulting Leads</label>
</ListView>