force-app/main/default/objects/Lead/listViews/Europe_Lead_Queue_Lead.listView-meta.xml
<ListView>
    <fullName>Europe_Lead_Queue_Lead</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE_CODE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LEAD.UNREAD</columns>
    <filterScope>Queue</filterScope>
    <filters>
        <field>Record_Type_Name__c</field>
        <operation>equals</operation>
        <value>SCS_Global_Services</value>
    </filters>
    <label>Europe Lead Queue</label>
    <queue>Europe_Lead_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>