force-app/main/default/objects/Lead/listViews/Forestry_Leads_Queue_Lead.listView-meta.xml
<ListView>
    <fullName>Forestry_Leads_Queue_Lead</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>Program__c</columns>
    <columns>LEAD.COUNTRY_CODE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LEAD.UNREAD</columns>
    <filterScope>Queue</filterScope>
    <label>Forestry Leads Queue</label>
    <queue>Forestry_Leads_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>