force-app/main/default/objects/Lead/listViews/Hubspot.listView-meta.xml
<ListView>
    <fullName>Hubspot</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>Program__c</columns>
    <columns>Recipient_Email__c</columns>
    <columns>LEAD.LEAD_SOURCE</columns>
    <columns>Recent_Campaign__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATEDBY_USER.ALIAS</field>
        <operation>contains</operation>
        <value>hspo</value>
    </filters>
    <filters>
        <field>Email_Bounce__c</field>
        <operation>equals</operation>
        <value>Yes</value>
    </filters>
    <filters>
        <field>LEAD.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Lead.SCS_Global_Services</value>
    </filters>
    <label>Hubspot</label>
</ListView>