force-app/main/default/objects/Lead/listViews/Latam_Leads_Queue_Lead.listView-meta.xml
<ListView>
    <fullName>Latam_Leads_Queue_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>Latam Leads Queue</label>
    <queue>Latam_Leads_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>