force-app/main/default/objects/Lead/listViews/Mexico_Leads_Queue_Lead.listView-meta.xml
<ListView>
    <fullName>Mexico_Leads_Queue_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>Mexico Leads Queue</label>
    <queue>Mexico_Leads_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>