force-app/main/default/objects/Lead/listViews/My_Cold_Leads.listView-meta.xml
<ListView>
    <fullName>My_Cold_Leads</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>Program__c</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE_CODE</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>LEAD.LEAD_SOURCE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>notEqual</operation>
        <value>Qualified</value>
    </filters>
    <filters>
        <field>LEAD.RATING</field>
        <operation>equals</operation>
        <value>Cold</value>
    </filters>
    <label>My Cold Leads</label>
</ListView>