force-app/main/default/objects/Lead/listViews/Sustainability_Consulting_Sales_Lead.listView-meta.xml
<ListView>
    <fullName>Sustainability_Consulting_Sales_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>Sustainability Consulting Sales</label>
    <queue>Sustainability_Consulting_Sales</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>